# microkernelia

./: .gitignore  ARCHITECTURE.md  BUILD.md  Cargo.toml  Makefile.toml  README.md  kernel-ia.json  one-and-only-context.json
.cargo/: config.toml
ai-runtime/: Cargo.toml
ai-runtime/src/: lib.rs
ai_runtime/: Cargo.toml
ai_runtime/src/: lib.rs
drivers-virtio/: Cargo.toml
drivers-virtio/src/: lib.rs
drivers_virtio/: Cargo.toml  build.rs
drivers_virtio/src/: lib.rs  log_helpers.rs
image/: limine.cfg
kernel/: Cargo.toml  link.ld  linker.ld
kernel/src/: lib.rs  tests.rs
logging/: Cargo.toml
logging/src/: lib.rs
mcp-core/: Cargo.toml
mcp-core/src/: lib.rs
mcp-vsock-transport/: Cargo.toml
mcp-vsock-transport/src/: lib.rs
mcp_core/: Cargo.toml
mcp_core/src/: lib.rs
mcp_vsock_transport/: Cargo.toml
mcp_vsock_transport/src/: lib.rs
otros/: --es una copia que no se compila.rs
tools/mcp-cli/: Cargo.toml
tools/mcp-cli/src/: main.rs
tools/mcp-server/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
