[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
drivers-virtio = { path = "../drivers-virtio" }
mcp-core = { path = "../mcp-core" }
mcp-vsock-transport = { path = "../mcp-vsock-transport" }
ai-runtime = { path = "../ai-runtime" }
logging = { path = "../logging" }
