[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
drivers_virtio = { path = "../drivers_virtio", default-features = false, features = ["kernel"] }
ai_runtime = { path = "../ai_runtime" }
mcp_vsock_transport = { path = "../mcp_vsock_transport" }
logging = { path = "../logging" }
mcp_core = { path = "../mcp_core" }
linked_list_allocator = "0.10"

[features]
default = []
global-allocator = ["mcp_core/global-allocator"]
virtio-log = []
kernel = ["drivers_virtio/kernel"]
